// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule element-case configured with "lowercase" smoketest 1`] = `
Array [
  Object {
    "errorCount": 2,
    "filePath": "test-files/rules/element-case.html",
    "messages": Array [
      Object {
        "column": 1,
        "context": undefined,
        "line": 2,
        "message": "Element \\"DIV\\" should be lowercase",
        "offset": 12,
        "ruleId": "element-case",
        "severity": 2,
        "size": 4,
      },
      Object {
        "column": 1,
        "context": undefined,
        "line": 3,
        "message": "Element \\"dIV\\" should be lowercase",
        "offset": 24,
        "ruleId": "element-case",
        "severity": 2,
        "size": 4,
      },
    ],
    "source": "<div></div>
<DIV></DIV>
<dIV></dIV>
",
    "warningCount": 0,
  },
]
`;

exports[`rule element-case configured with "uppercase" smoketest 1`] = `
Array [
  Object {
    "errorCount": 2,
    "filePath": "test-files/rules/element-case.html",
    "messages": Array [
      Object {
        "column": 1,
        "context": undefined,
        "line": 1,
        "message": "Element \\"div\\" should be uppercase",
        "offset": 0,
        "ruleId": "element-case",
        "severity": 2,
        "size": 4,
      },
      Object {
        "column": 1,
        "context": undefined,
        "line": 3,
        "message": "Element \\"dIV\\" should be uppercase",
        "offset": 24,
        "ruleId": "element-case",
        "severity": 2,
        "size": 4,
      },
    ],
    "source": "<div></div>
<DIV></DIV>
<dIV></dIV>
",
    "warningCount": 0,
  },
]
`;
